--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,11 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Step-Admin-React</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
+
+
     <link rel="stylesheet" href="css/argon.css?v=1.2.0" type="text/css">
+    
   </head>
   <body>
     <div id="root"></div>
